tests/NormalTests/paczka2/big_fuzzy/89825978.err
Error in line 8: qfe2y9UNC S735 6,2
Error in line 30: 5XHnpHH S735 6,2
Error in line 33: ÓtkB S735 48,8
Error in line 56: PaAq70kbB A747 B0,3
Error in line 57: A10 S402 60,93
Error in line 55: qfe2y9UNC A747 56,2
Error in line 58: qfe2y9UNC A10 2,3
Error in line 54: A10 S402 73,5
Error in line 72: 5XHnpHH A747 58,1
Error in line 73: fa0f A747 71,9
Error in line 50: 1tkB S735 94,1
Error in line 84: 5XHnpHH A10 83,9
Error in line 87: mezu6dai S735 42,8
Error in line 70: A10 A747 93,7
Error in line 82: 1tkB A10 43,2
Error in line 97: mezu6dai S735 54,8
Error in line 101: 5XHnpHH S402 71,8
Error in line 77: PaAq70kb1 A747 159,4
Error in line 95: 1tkB A747 4,3
Error in line 104: PaAq70kb1 S402 42,0
Error in line 108: PaAq70kb1 A10 96,5
Error in line 105: A10 S735 833,0
Error in line 110: PaAq70kb1 S735 34,1
Error in line 118: 1tkB S735 99,8
Error in line 119: 1tkB S402 77,9
Error in line 126: 5XHnpHH A10 7w,5
Error in line 128: fa0f S402 1,2
Error in line 137: mezu6dai S402 111,6
Error in line 141: fa0f A10 45,0
Error in line 144: mezu6dai S735 25,9
Error in line 151: mezu6dai A10 3,8
Error in line 154: fa0f S735 26,2
Error in line 162: OXHnpHH A747 O,2
Error in line 161: fa0f A10 80,5
Error in line 174: fa0f S735 55,83
Error in line 184: 1tkB A1s 34,5
Error in line 176: A10 S735 11,3
Error in line 197: A10 A747 352,3
Error in line 199: PaAq70kb1 S735 99,1
Error in line 211: PaAq70kb1 S402 53,3
Error in line 177: 5XHnpHH A747 25,4
Error in line 215: PaAq70kb1 A747 202,2
Error in line 231: mezu6dai A343 6,3
